<resources>
    <string name="app_name">Mommy&#038;BabyCare</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="auth_failed">Wrong email or password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter">Enter</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="confinement_service">Confinement Service</string>
    <string name="about_us">About Us</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user">New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select">Select</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="nationality">Nationality</string>
    <string name="email_example">abc123@example.com</string>
    <string name="password_example">p@$$w0rd</string>
    <string name="first_name_example">John</string>
    <string name="last_name_example">Doe</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="phone_number_example">0123456789</string>
    <string name="account_type">Account Type</string>
    <string name="state">State</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_package">Add Package</string>
    <string name="view_package">View Package</string>
    <string name="package_name">Package Name</string>
    <string name="price">Price</string>
    <string name="package_description">Package Description</string>
    <string name="package_price">Package Price RM</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="package_manager">Package Manager</string>
    <string name="apply">Apply</string>
    <string name="add_media">Add Media</string>
    <string name="register_cl">Register as Confinement Lady</string>
    <string name="register_m">Register as Mother</string>
    <string name="submit_selfie">Submit Selfie</string>
    <string name="submit_identity_card">Submit Identity Card</string>
    <string name="my_profile">My Profile</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="package_photo">Package Photo</string>
    <string name="my_wallet">My Wallet</string>
    <string name="manage_package">Manage Package</string>
    <string name="tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="otnc"><![CDATA[Other Terms & Conditions]]></string>
    <string name="user_testimony">User Testimony</string>
    <string name="package_duration">Package Duration</string>
    <string name="package_service">Package Service</string>

    <string-array name="nationality">
        <item>Select</item>
        <item>Malaysian</item>
        <item>Non-Malaysian</item>
    </string-array>

    <string-array name="state">
        <item>Select</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>

    <string-array name="account_type">
        <item>Select</item>
        <item>Confinement Lady</item>
        <item>Mother</item>
    </string-array>

    <string-array name="package_duration">
        <item>Select</item>
        <item>1 Day</item>
        <item>7 Days</item>
        <item>14 Days</item>
        <item>21 Days</item>
        <item>28 Days</item>
        <item>28 Days and Above</item>
    </string-array>
</resources>
